--- a/pympress/share/locale/cs/pympress.po
+++ b/pympress/share/locale/cs/pympress.po
@@ -1,6 +1,6 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: Pympress v1.2.1\n"
+"Project-Id-Version: Pympress v1.5.0-b4\n"
 "Report-Msgid-Bugs-To: me@cimba.li\n"
 "POT-Creation-Date: 2016-10-24 15:50+0200\n"
 "PO-Revision-Date: 2019-01-14 23:09+0100\n"
@@ -80,6 +80,9 @@ msgstr "Nelze nastavit stav spořiče obrazovky: stav "
 msgid "Current slide"
 msgstr "Aktuální snímek"
 
+msgid "ERROR: Gobject Introspections module is missing, make sure Gtk and pygobject are installed on your system."
+msgstr ""
+
 msgid "Error loading icon for about window"
 msgstr "Chyba při nahrávání ikony pro okno O programu"
 
@@ -90,6 +93,17 @@ msgctxt "shortcut window"
 msgid "First slide"
 msgstr "První snímek"
 
+msgid "For instructions, refer to https://github.com/Cimbali/pympress/blob/master/README.md#dependencies"
+msgstr ""
+
+msgctxt "shortcut window"
+msgid "Go back in slide history"
+msgstr ""
+
+msgctxt "shortcut window"
+msgid "Go forward in slide history"
+msgstr ""
+
 msgctxt "shortcut window"
 msgid "Go to page number"
 msgstr "Jít na stránku číslo"
@@ -99,6 +113,9 @@ msgstr "GtkImage přehrávač gifů"
 
 msgid "Highlight"
 msgstr "Zvýraznit"
+
+msgid "If using a virtualenv or anaconda, you can either allow system site packages, or run: pip install pygobject"
+msgstr ""
 
 msgid "Invalid log level \"{}\", try one of {}"
 msgstr "Neplatná úroveň logu \"{}\", vyzkoušejte jednu z těchto: {}"
@@ -180,9 +197,15 @@ msgstr "Pustit/zastavit časovač"
 msgid "Pointer"
 msgstr "Ukazovátko"
 
+msgid "Portable installation"
+msgstr ""
+
 msgctxt "shortcut window"
 msgid "Presentation"
 msgstr "Prezentace"
+
+msgid "Presentation timing breakdown"
+msgstr ""
 
 msgid "Presenter fullscreen"
 msgstr "Prezentace na celou obrazovku"
@@ -268,6 +291,9 @@ msgstr "Vyměnit okna"
 msgid "The estimated (intended) talk time in minutes"
 msgstr "Odhadovaná (plánovaná) doba prezentace v minutách"
 
+msgid "The log is written to "
+msgstr ""
+
 msgid "This help"
 msgstr "Tato pomoc"
 
@@ -280,6 +306,9 @@ msgstr "Odhad času"
 msgctxt "shortcut window"
 msgid "Timers"
 msgstr "Časovače"
+
+msgid "Timing breakdown"
+msgstr ""
 
 msgctxt "shortcut window"
 msgid "Toggle annotations"
@@ -294,12 +323,19 @@ msgid "Toggle highlighting"
 msgstr "Zvýrazňování"
 
 msgctxt "shortcut window"
+msgid "Toggle laserpointer"
+msgstr ""
+
+msgctxt "shortcut window"
 msgid "Toggle notes mode"
 msgstr "Mód poznámek"
 
 msgctxt "shortcut window"
 msgid "Undo highlight stroke"
 msgstr "Zrušit obrys zvýraznění"
+
+msgid "Unexpected action in index \"{}\""
+msgstr ""
 
 msgid "Unknow widget {} to be fullscreened, aborting."
 msgstr "Neznámý widget {} bude na maximalizován na celou obrazovku, ruším."
@@ -313,6 +349,10 @@ msgstr "Oddálit"
 
 msgid "Usage: {} [options] <presentation_file>"
 msgstr "Použití: {} [options] <presentation_file>"
+
+msgctxt "shortcut window"
+msgid "Validate goto/jump destination"
+msgstr ""
 
 msgid "Video support using {} is disabled."
 msgstr "Podpora videa přes {} je vypnuta."
@@ -373,6 +413,9 @@ msgstr "_Poslední"
 msgid "_Left"
 msgstr "_Vlevo"
 
+msgid "_Manual"
+msgstr ""
+
 msgid "_Navigation"
 msgstr "_Navigace"
 
@@ -384,6 +427,9 @@ msgstr "_Mód s poznámkami"
 
 msgid "_Pause timer"
 msgstr "_Pozastavit stopky"
+
+msgid "_Permanent"
+msgstr ""
 
 msgid "_Presentation"
 msgstr "_Prezentace"
@@ -421,14 +467,35 @@ msgstr "_Přiblížit"
 msgid "access denied when trying to access screen saver settings in registry!"
 msgstr "přístup byl odepřen při pokusu o přístup k nastavení spořiče obrazovky v registru!"
 
+msgid "column"
+msgstr ""
+
+msgid "duration"
+msgstr ""
+
+msgid "name"
+msgstr ""
+
 msgid "no action defined for this link!"
 msgstr "žádná akce není definována pro tento odkaz!"
 
 msgid "page label"
 msgstr "štítek stránky"
 
+msgid "pip will then download and compile pygobject, for which you need the Gtk headers (or development package)."
+msgstr ""
+
 msgid "pympress is a little PDF reader written in Python using Poppler for PDF rendering and GTK for the GUI.\n"
 msgstr "pympress je malý prohlížeč PDF napsaný v Pythonu používající Poppler k zobrazení PDF a GTK pro GUI.\n"
+
+msgid "slide"
+msgstr ""
+
+msgid "slide #"
+msgstr ""
+
+msgid "time"
+msgstr ""
 
 msgid "{}, {}, {}, {}, or {}"
 msgstr "{}, {}, {}, {}, nebo {}"
