--- a/pympress/share/locale/de/pympress.po
+++ b/pympress/share/locale/de/pympress.po
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Pympress v1.2.1\n"
+"Project-Id-Version: Pympress v1.5.0-b4\n"
 "Report-Msgid-Bugs-To: me@cimba.li\n"
 "POT-Creation-Date: 2016-10-24 15:50+0200\n"
 "PO-Revision-Date: 2019-01-15 12:47+0100\n"
@@ -83,6 +83,9 @@ msgstr "Bildschirmschoner-Status kann nicht gesetzt werden: Status"
 msgid "Current slide"
 msgstr "Aktuelle Folie"
 
+msgid "ERROR: Gobject Introspections module is missing, make sure Gtk and pygobject are installed on your system."
+msgstr ""
+
 msgid "Error loading icon for about window"
 msgstr "Fehler beim Laden des Icons für das \"Über\"-Fenster"
 
@@ -93,6 +96,17 @@ msgctxt "shortcut window"
 msgid "First slide"
 msgstr "Erste Folie"
 
+msgid "For instructions, refer to https://github.com/Cimbali/pympress/blob/master/README.md#dependencies"
+msgstr ""
+
+msgctxt "shortcut window"
+msgid "Go back in slide history"
+msgstr ""
+
+msgctxt "shortcut window"
+msgid "Go forward in slide history"
+msgstr ""
+
 msgctxt "shortcut window"
 msgid "Go to page number"
 msgstr "Wechseln zu Folie Nummer"
@@ -102,6 +116,9 @@ msgstr "Gif-Wiedergabe mit GtkImage"
 
 msgid "Highlight"
 msgstr "Hervorheben"
+
+msgid "If using a virtualenv or anaconda, you can either allow system site packages, or run: pip install pygobject"
+msgstr ""
 
 msgid "Invalid log level \"{}\", try one of {}"
 msgstr "Ungültiges Log-Level \"{}\", versuche eines aus {}"
@@ -183,9 +200,15 @@ msgstr "Timer starten/pausieren"
 msgid "Pointer"
 msgstr "Zeiger"
 
+msgid "Portable installation"
+msgstr ""
+
 msgctxt "shortcut window"
 msgid "Presentation"
 msgstr "Präsentation"
+
+msgid "Presentation timing breakdown"
+msgstr ""
 
 msgid "Presenter fullscreen"
 msgstr "Vollbild für Präsentator"
@@ -271,6 +294,9 @@ msgstr "Fenster tauschen"
 msgid "The estimated (intended) talk time in minutes"
 msgstr "Die geschätzte (angestrebte) Redezeit in Minuten"
 
+msgid "The log is written to "
+msgstr ""
+
 msgid "This help"
 msgstr "Diese Hilfe"
 
@@ -283,6 +309,9 @@ msgstr "Geschätzte Zeit"
 msgctxt "shortcut window"
 msgid "Timers"
 msgstr "Timer"
+
+msgid "Timing breakdown"
+msgstr ""
 
 msgctxt "shortcut window"
 msgid "Toggle annotations"
@@ -297,12 +326,19 @@ msgid "Toggle highlighting"
 msgstr "Hervorhebungen umschalten"
 
 msgctxt "shortcut window"
+msgid "Toggle laserpointer"
+msgstr ""
+
+msgctxt "shortcut window"
 msgid "Toggle notes mode"
 msgstr "Notizmodus umschalten"
 
 msgctxt "shortcut window"
 msgid "Undo highlight stroke"
 msgstr "Hervorhebung rückgängig machen"
+
+msgid "Unexpected action in index \"{}\""
+msgstr ""
 
 msgid "Unknow widget {} to be fullscreened, aborting."
 msgstr "Unbekanntes Widget {} für die Vollbildanzeige, Abbruch."
@@ -316,6 +352,10 @@ msgstr "Zoom rückgängig machen"
 
 msgid "Usage: {} [options] <presentation_file>"
 msgstr "Verwendung: {} [Optionen] <Präsentationsdatei>"
+
+msgctxt "shortcut window"
+msgid "Validate goto/jump destination"
+msgstr ""
 
 msgid "Video support using {} is disabled."
 msgstr "Videounterstützung auf Basis von {} ist deaktiviert."
@@ -430,14 +470,35 @@ msgstr "Hinein_zoomen"
 msgid "access denied when trying to access screen saver settings in registry!"
 msgstr "Zugriff auf die Bildschirmschoner-Einstellungen der Registry nicht erlaubt!"
 
+msgid "column"
+msgstr ""
+
+msgid "duration"
+msgstr ""
+
+msgid "name"
+msgstr ""
+
 msgid "no action defined for this link!"
 msgstr "für diesen Link ist keine Aktion definiert!"
 
 msgid "page label"
 msgstr "Seitenlabel"
 
+msgid "pip will then download and compile pygobject, for which you need the Gtk headers (or development package)."
+msgstr ""
+
 msgid "pympress is a little PDF reader written in Python using Poppler for PDF rendering and GTK for the GUI.\n"
 msgstr "pympress ist ein kleiner PDF-Reader, geschrieben in Python unter Verwendung von Poppler für die PDF-Anzeige und GTK für die GUI.\n"
+
+msgid "slide"
+msgstr ""
+
+msgid "slide #"
+msgstr ""
+
+msgid "time"
+msgstr ""
 
 msgid "{}, {}, {}, {}, or {}"
 msgstr "{}, {}, {}, {}, oder {}"
