--- a/pympress/share/locale/es/pympress.po
+++ b/pympress/share/locale/es/pympress.po
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Pympress v1.2.1\n"
+"Project-Id-Version: Pympress v1.5.0-b4\n"
 "Report-Msgid-Bugs-To: me@cimba.li\n"
 "POT-Creation-Date: 2016-10-24 15:50+0200\n"
 "PO-Revision-Date: 2018-02-10 19:34+0200\n"
@@ -81,6 +81,9 @@ msgstr "Atención: El estado del salvapantallas no se puede recuperar: "
 msgid "Current slide"
 msgstr "Diapositiva actual"
 
+msgid "ERROR: Gobject Introspections module is missing, make sure Gtk and pygobject are installed on your system."
+msgstr ""
+
 msgid "Error loading icon for about window"
 msgstr "Error al cargar los iconos"
 
@@ -91,6 +94,17 @@ msgctxt "shortcut window"
 msgid "First slide"
 msgstr "Primera diapositiva"
 
+msgid "For instructions, refer to https://github.com/Cimbali/pympress/blob/master/README.md#dependencies"
+msgstr ""
+
+msgctxt "shortcut window"
+msgid "Go back in slide history"
+msgstr ""
+
+msgctxt "shortcut window"
+msgid "Go forward in slide history"
+msgstr ""
+
 msgctxt "shortcut window"
 msgid "Go to page number"
 msgstr "Ir al número de página"
@@ -100,6 +114,9 @@ msgstr "Reproductor de gif GtkImage"
 
 msgid "Highlight"
 msgstr "Resaltar"
+
+msgid "If using a virtualenv or anaconda, you can either allow system site packages, or run: pip install pygobject"
+msgstr ""
 
 msgid "Invalid log level \"{}\", try one of {}"
 msgstr "Nivel de registro incorrecto \"{}\", seleccione una de las siguientes opciones {}"
@@ -181,9 +198,15 @@ msgstr "Temporizador de reproducción/pausa"
 msgid "Pointer"
 msgstr "Puntero"
 
+msgid "Portable installation"
+msgstr ""
+
 msgctxt "shortcut window"
 msgid "Presentation"
 msgstr "Presentación"
+
+msgid "Presentation timing breakdown"
+msgstr ""
 
 msgid "Presenter fullscreen"
 msgstr "Presentación a pantalla completa"
@@ -269,6 +292,9 @@ msgstr "Intercambiar ventanas"
 msgid "The estimated (intended) talk time in minutes"
 msgstr "Duración estimada (prevista) de la presentación, en minutos"
 
+msgid "The log is written to "
+msgstr ""
+
 msgid "This help"
 msgstr "Este es un mensaje de ayuda"
 
@@ -281,6 +307,9 @@ msgstr "Tiempo estimado"
 msgctxt "shortcut window"
 msgid "Timers"
 msgstr "Temporizadores"
+
+msgid "Timing breakdown"
+msgstr ""
 
 msgctxt "shortcut window"
 msgid "Toggle annotations"
@@ -295,12 +324,19 @@ msgid "Toggle highlighting"
 msgstr "Alternar resaltado"
 
 msgctxt "shortcut window"
+msgid "Toggle laserpointer"
+msgstr ""
+
+msgctxt "shortcut window"
 msgid "Toggle notes mode"
 msgstr "Alternar el modo de notas"
 
 msgctxt "shortcut window"
 msgid "Undo highlight stroke"
 msgstr "Deshacer trazo de resalta"
+
+msgid "Unexpected action in index \"{}\""
+msgstr ""
 
 msgid "Unknow widget {} to be fullscreened, aborting."
 msgstr "Elemento visual {} desconocido a pantalla completa, parando."
@@ -314,6 +350,10 @@ msgstr "Deshacer zoom"
 
 msgid "Usage: {} [options] <presentation_file>"
 msgstr "Uso: {} [opciones] <archivo_de_presentación>."
+
+msgctxt "shortcut window"
+msgid "Validate goto/jump destination"
+msgstr ""
 
 msgid "Video support using {} is disabled."
 msgstr "El soporte de vídeo con {} está desactivado."
@@ -374,6 +414,9 @@ msgstr "Último"
 msgid "_Left"
 msgstr "Derecha"
 
+msgid "_Manual"
+msgstr ""
+
 msgid "_Navigation"
 msgstr "_Navegación"
 
@@ -385,6 +428,9 @@ msgstr "Modo _Notas"
 
 msgid "_Pause timer"
 msgstr "Temporizador en _pausa"
+
+msgid "_Permanent"
+msgstr ""
 
 msgid "_Presentation"
 msgstr "_Presentación"
@@ -422,14 +468,35 @@ msgstr "Hacer _zoom"
 msgid "access denied when trying to access screen saver settings in registry!"
 msgstr "acceso denegado al cambiar la configuración del protector de pantalla durante el registro !"
 
+msgid "column"
+msgstr ""
+
+msgid "duration"
+msgstr ""
+
+msgid "name"
+msgstr ""
+
 msgid "no action defined for this link!"
 msgstr "ninguna acción definida para este enlace !"
 
 msgid "page label"
 msgstr "etiqueta de página"
 
+msgid "pip will then download and compile pygobject, for which you need the Gtk headers (or development package)."
+msgstr ""
+
 msgid "pympress is a little PDF reader written in Python using Poppler for PDF rendering and GTK for the GUI.\n"
 msgstr "pympress es un lector de PDF ligero escrito en Python, usando Poppler para mostrar PDF y GTK en la interfaz gráfica de usuario..\n"
+
+msgid "slide"
+msgstr ""
+
+msgid "slide #"
+msgstr ""
+
+msgid "time"
+msgstr ""
 
 msgid "{}, {}, {}, {}, or {}"
 msgstr "{}, {}, {}, {}, o {}"
