--- a/pympress/share/locale/pympress.pot
+++ b/pympress/share/locale/pympress.pot
@@ -1,6 +1,6 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: Pympress v1.2.1\n"
+"Project-Id-Version: Pympress v1.5.0-b4\n"
 "Report-Msgid-Bugs-To: me@cimba.li\n"
 "POT-Creation-Date: 2016-10-24 15:50+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
@@ -78,6 +78,9 @@ msgstr ""
 msgid "Current slide"
 msgstr ""
 
+msgid "ERROR: Gobject Introspections module is missing, make sure Gtk and pygobject are installed on your system."
+msgstr ""
+
 msgid "Error loading icon for about window"
 msgstr ""
 
@@ -88,6 +91,17 @@ msgctxt "shortcut window"
 msgid "First slide"
 msgstr ""
 
+msgid "For instructions, refer to https://github.com/Cimbali/pympress/blob/master/README.md#dependencies"
+msgstr ""
+
+msgctxt "shortcut window"
+msgid "Go back in slide history"
+msgstr ""
+
+msgctxt "shortcut window"
+msgid "Go forward in slide history"
+msgstr ""
+
 msgctxt "shortcut window"
 msgid "Go to page number"
 msgstr ""
@@ -96,6 +110,9 @@ msgid "GtkImage gif player"
 msgstr ""
 
 msgid "Highlight"
+msgstr ""
+
+msgid "If using a virtualenv or anaconda, you can either allow system site packages, or run: pip install pygobject"
 msgstr ""
 
 msgid "Invalid log level \"{}\", try one of {}"
@@ -178,8 +195,14 @@ msgstr ""
 msgid "Pointer"
 msgstr ""
 
+msgid "Portable installation"
+msgstr ""
+
 msgctxt "shortcut window"
 msgid "Presentation"
+msgstr ""
+
+msgid "Presentation timing breakdown"
 msgstr ""
 
 msgid "Presenter fullscreen"
@@ -266,6 +289,9 @@ msgstr ""
 msgid "The estimated (intended) talk time in minutes"
 msgstr ""
 
+msgid "The log is written to "
+msgstr ""
+
 msgid "This help"
 msgstr ""
 
@@ -277,6 +303,9 @@ msgstr ""
 
 msgctxt "shortcut window"
 msgid "Timers"
+msgstr ""
+
+msgid "Timing breakdown"
 msgstr ""
 
 msgctxt "shortcut window"
@@ -292,11 +321,18 @@ msgid "Toggle highlighting"
 msgstr ""
 
 msgctxt "shortcut window"
+msgid "Toggle laserpointer"
+msgstr ""
+
+msgctxt "shortcut window"
 msgid "Toggle notes mode"
 msgstr ""
 
 msgctxt "shortcut window"
 msgid "Undo highlight stroke"
+msgstr ""
+
+msgid "Unexpected action in index \"{}\""
 msgstr ""
 
 msgid "Unknow widget {} to be fullscreened, aborting."
@@ -310,6 +346,10 @@ msgid "Unzoom"
 msgstr ""
 
 msgid "Usage: {} [options] <presentation_file>"
+msgstr ""
+
+msgctxt "shortcut window"
+msgid "Validate goto/jump destination"
 msgstr ""
 
 msgid "Video support using {} is disabled."
@@ -425,13 +465,34 @@ msgstr ""
 msgid "access denied when trying to access screen saver settings in registry!"
 msgstr ""
 
+msgid "column"
+msgstr ""
+
+msgid "duration"
+msgstr ""
+
+msgid "name"
+msgstr ""
+
 msgid "no action defined for this link!"
 msgstr ""
 
 msgid "page label"
 msgstr ""
 
+msgid "pip will then download and compile pygobject, for which you need the Gtk headers (or development package)."
+msgstr ""
+
 msgid "pympress is a little PDF reader written in Python using Poppler for PDF rendering and GTK for the GUI.\n"
+msgstr ""
+
+msgid "slide"
+msgstr ""
+
+msgid "slide #"
+msgstr ""
+
+msgid "time"
 msgstr ""
 
 msgid "{}, {}, {}, {}, or {}"
